[package]
name = "olls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.11.0", features = ["dynamic_linking"] }
 bevy = "=0.11"
bracket-lib = "0.8"
rand = "0.8"
serde = "1"
ron = "0.8"
num-traits = "0.2"
num-derive = "0.4"
tiled = "0.11.1"
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!